--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -156,41 +156,41 @@ services:
   # Monitoring Services
   # ========================================
 
-  # prometheus:
-  #   image: prom/prometheus:v3.9.1
-  #   container_name: prometheus
-  #   volumes:
-  #     - ./docker/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-  #   extra_hosts:
-  #     - "host.docker.internal:host-gateway"
-  #   ports:
-  #     - "9090:9090"
-  #   networks:
-  #     - opsflow-net
-  #   healthcheck:
-  #     test: ["CMD", "wget", "-q", "--spider", "http://localhost:9090/-/healthy"]
-  #     interval: 30s
-  #     timeout: 10s
-  #     retries: 3
+  prometheus:
+    image: prom/prometheus:v3.9.1
+    container_name: prometheus
+    volumes:
+      - ./docker/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    ports:
+      - "9090:9090"
+    networks:
+      - opsflow-net
+    healthcheck:
+      test: ["CMD", "wget", "-q", "--spider", "http://localhost:9090/-/healthy"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
-  # grafana:
-  #   image: grafana/grafana:12.3.1
-  #   container_name: grafana
-  #   ports:
-  #     - "3000:3000"
-  #   volumes:
-  #     - ./docker/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
-  #     - ./docker/grafana/dashboards:/etc/grafana/provisioning/dashboards
-  #     - ./docker/grafana/dashboards:/var/lib/grafana/dashboards
-  #     - grafana_data:/var/lib/grafana
-  #   environment:
-  #     - GF_SECURITY_ADMIN_PASSWORD=admin
-  #     - GF_FEATURE_TOGGLES_ENABLE=pluginsSriChecks:false
-  #   depends_on:
-  #     prometheus:
-  #       condition: service_healthy
-  #   networks:
-  #     - opsflow-net
+  grafana:
+    image: grafana/grafana:12.3.1
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./docker/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+      - ./docker/grafana/dashboards:/etc/grafana/provisioning/dashboards
+      - ./docker/grafana/dashboards:/var/lib/grafana/dashboards
+      - grafana_data:/var/lib/grafana
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_FEATURE_TOGGLES_ENABLE=pluginsSriChecks:false
+    depends_on:
+      prometheus:
+        condition: service_healthy
+    networks:
+      - opsflow-net
 
 networks:
   opsflow-net:
@@ -198,4 +198,4 @@ networks:
 
 volumes:
   mongodb_data:
-  # grafana_data:
+  grafana_data:
