--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -21,8 +21,13 @@ spring:
               filters:
                 - StripPrefix=0 #keep full path when forwarding (also default one)
 
-            - id: notification-service
+            - id: auth-service
               uri: http://localhost:8082
+              predicates:
+                - Path=/api/auth/**
+
+            - id: notification-service
+              uri: http://localhost:8083
               predicates:
               - Path=/api/notifications/**
 
