--- a/docker/grafana/dashboards/dashboard.yml
+++ b/docker/grafana/dashboards/dashboard.yml
@@ -1,9 +1,9 @@
 apiVersion: 1
 
 providers:
-  - name: "Spring Boot Dashboards"
+  - name: "FlowOps Dashboards"
     orgId: 1
-    folder: "Spring Boot"
+    folder: "FlowOps"
     type: file
     disableDeletion: false
     editable: true
