--- a/auth-service/src/main/resources/application.yaml
+++ b/auth-service/src/main/resources/application.yaml
@@ -6,8 +6,7 @@ spring:
     name: auth-service
 
   mongodb:
-    uri: mongodb://127.0.0.1:27017/flow_ops
-
+    uri: ${SPRING_DATA_MONGODB_URI}
 
 logging:
   level:
