--- a/notification-service/src/main/resources/application.yaml
+++ b/notification-service/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ spring:
   application:
     name: FlowOps
   kafka:
-    bootstrap-servers: localhost:9094
+    bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
