--- a/release-service/src/main/resources/application.yaml
+++ b/release-service/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ spring:
   application:
     name: FlowOps
   kafka:
-    bootstrap-servers: localhost:9094
+    bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
@@ -36,7 +36,7 @@ spring:
           - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
           - org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
   mongodb:
-    uri: mongodb://127.0.0.1:27017/flow_ops
+    uri: ${SPRING_DATA_MONGODB_URI}
 
 # TODO change later
 app:
