Env variables adjusted

--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -40,7 +40,9 @@ spring:
                 - Path=/api/v1/chat/**
               filters:
                 - StripPrefix=2
-
+opsflow:
+  JWT_SECRET: ${JWT_SECRET:INVALID}
+  
 management:
   endpoints:
     web:
