update env file

--- a/.env.example
+++ b/.env.example
@@ -16,12 +16,11 @@ MONGO_ROOT_PASSWORD=password
 # ===========================================
 # Service URLs (for Docker Compose)
 # ===========================================
-AUTH_SERVICE_URL=http://auth-service:8085
+AUTH_SERVICE_URL=http://auth-service:8082
 RELEASE_SERVICE_URL=http://release-service:8081
-NOTIFICATION_SERVICE_URL=http://notification-service:8082
-CHAT_SERVICE_URL=http://chat-service:8083
-FORUM_SERVICE_URL=http://forum-service:8084
-
+NOTIFICATION_SERVICE_URL=http://notification-service:8083
+CHATBOT_SERVICE_URL=http://chatbot-service:8084
+FORUM_SERVICE_URL=http://forum-service:8086
 # ===========================================
 # Kafka Configuration
 # ===========================================
