--- a/.env.example
+++ b/.env.example
@@ -19,9 +19,8 @@ MONGO_ROOT_PASSWORD=password
 AUTH_SERVICE_URL=http://auth-service:8082
 RELEASE_SERVICE_URL=http://release-service:8081
 NOTIFICATION_SERVICE_URL=http://notification-service:8083
-CHAT_SERVICE_URL=http://chat-service:8084
+CHATBOT_SERVICE_URL=http://chatbot-service:8084
 FORUM_SERVICE_URL=http://forum-service:8086
-
 # ===========================================
 # Kafka Configuration
 # ===========================================
