--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -41,8 +41,8 @@ spring:
               filters:
                 - StripPrefix=2
 opsflow:
-  JWT_SECRET: ${JWT_SECRET:INVALID}
-  
+  JWT_SECRET: ${JWT_SECRET:PASS_YOUR_SECRET_KEY_HERE}
+
 management:
   endpoints:
     web:
