--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -223,6 +223,30 @@ services:
       timeout: 10s
       retries: 3
 
+  discussion-service:
+    build:
+      context: ./discussion-service
+      dockerfile: Dockerfile
+    container_name: discussion-service
+    ports:
+      - "8086:8086"
+    environment:
+      - SERVER_PORT=8086
+      - SPRING_DATA_MONGODB_URI=${SPRING_DATA_MONGODB_URI:-mongodb://mongodb:27017/flow_ops_db}
+      - KAFKA_BOOTSTRAP_SERVERS=${SPRING_KAFKA_BOOTSTRAP_SERVERS:-kafka:9092}
+    depends_on:
+      mongodb:
+        condition: service_healthy
+      kafka:
+        condition: service_started
+    networks:
+      - flowops-net
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8086/actuator/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
   api-gateway:
     build:
       context: ./api-gateway
@@ -236,12 +260,14 @@ services:
       - AUTH_SERVICE_URL=${AUTH_SERVICE_URL:-http://auth-service:8082}
       - NOTIFICATION_SERVICE_URL=${NOTIFICATION_SERVICE_URL:-http://notification-service:8083}
       - CHATBOT_SERVICE_URL=${CHATBOT_SERVICE_URL:-http://chatbot-service:8084}
+      - DISCUSSION_SERVICE_URL=${DISCUSSION_SERVICE_URL:-http://discussion-service:8086}
       - JWT_SECRET=${JWT_SECRET:-INVALID}
     depends_on:
       - auth-service
       - release-service
       - notification-service
       - chatbot-service
+      - discussion-service
     networks:
       - flowops-net
     healthcheck:
