--- a/auth-service/src/main/resources/application.yaml
+++ b/auth-service/src/main/resources/application.yaml
@@ -20,4 +20,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: health, info, beans, info, metrics, mappings, prometheus, threaddump
+        include: health, info, info, metrics, mappings, prometheus, threaddump
+  metrics:
+    tags:
+      application: auth-service
