--- a/docker/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus.yml
@@ -37,3 +37,10 @@ scrape_configs:
       - targets: ["chatbot-service:8084"]
         labels:
           service: "chatbot-service"
+
+  - job_name: "discussion-service"
+    metrics_path: "/actuator/prometheus"
+    static_configs:
+      - targets: ["chatbot-service:8086"]
+        labels:
+          service: "discussion-service"
